1999-06-05  Richard Henderson  <rth@cygnus.com>

	* gas/elf/elf.exp: New directory.
	* gas/elf/section0.[sd]: New test.
	* gas/elf/section1.[sd]: New test.

1999-06-03  Philip Blundell  <philb@gnu.org>

	* gas/arm/arm7t.d, gas/arm/inst.d: Update to match current gas,
 	bfd and opcodes.

1999-05-28  Ian Lance Taylor  <ian@zembu.com>

	* gas/vtable/vtable.exp: Don't run test for i960 yet.

1999-05-17  Nick Clifton  <nickc@cygnus.com>

	* gas/mcore/allinsn.d: Updated to match latest objdump output.

1999-05-12  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* gas/i386/opcode.d: Modify callw to suit disasm fix.

	* gas/i386/amd.d: Modify a '(bad)' to SIMD instruction.

	* gas/i386/amd.s: Pad to multiple of 8
	* gas/i386/amd.d: Here too.

	* gas/i386/prefix.[sd]: Align with nops
	* gas/i386/reloc.[sd]: Here too.

	* gas/i386/katmai.[sd]: New for PIII SIMD
	* gas/i386/i386.exp: Call it.

1999-05-02  Nick Clifton  <nickc@cygnus.com>

	* gas/mcore/allinsn.d: Update to match latest assembler
	operations. 

1999-04-16  DJ Delorie  <dj@cygnus.com>

	* gas/i386/amd.s: Add NOPs to align for coff targets
	* gas/i386/amd.d: and check for them.

Thu Apr 15 15:03:43 1999  Jeffrey A Law  (law@cygnus.com)

	* gas/hppa/basic/basic.exp (do_coprmem): No longer expected to file.

Wed Apr 14 13:43:06 1999  Jeffrey A Law  (law@cygnus.com)

	* gas/hppa/basic/branch.s: Do not use immediate value where we
	really want a register.
	* gas/hppa/basic/coprmem.s: Likewise.
	* gas/hppa/basic/fmemLRbug.s: Likewise.
	* gas/hppa/basic/coprmem.s: Likewise.
	* gas/hppa/basic/spop.s: Likewise.
	* gas/hppa/basic/imem.s: Likewise.
	* gas/hppa/parse/badfmpyadd.s: Likewise.
	* gas/hppa/parse/calldatabug.s: Likewise.
	* gas/hppa/parse/entrybug.s: Likewise.
	* gas/hppa/parse/exprbug.s: Likewise.
	* gas/hppa/parse/fixup7bug.s: Likewise.
	* gas/hppa/parse/labelbug.s: Likewise.
	* gas/hppa/reloc/applybug.s: Likewise.
	* gas/hppa/reloc/funcrelocbug.s: Likewise.
	* gas/hppa/reloc/labelopbug.s: Likewise.