@@ -1,8 +1,8 @@
 	.irp	param,1,2,3
-	.long	r\param
+	.long	foo\param
 	.endr
 
 	.irpc	param,123
-	.long	s\param
+	.long	bar\param
 	.endr
 
