@@ -5,4 +5,4 @@
 
 RELOCATION RECORDS FOR .*
 OFFSET[ 	]+TYPE[ 	]+VALUE.*
-0+00[ 	]+[a-zA-Z0-9_]+[ 	]+r1
+0+00[ 	]+[a-zA-Z0-9_]+[ 	]+foo1
